WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258353
[WPE] Crash in `WebKit.OnDeviceChangeCrash` API test
https://bugs.webkit.org/show_bug.cgi?id=258353
Summary
[WPE] Crash in `WebKit.OnDeviceChangeCrash` API test
Vitaly Dyackhov
Reported
2023-06-21 06:45:48 PDT
The test started to crash presumably since
https://commits.webkit.org/260457@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2023-06-21 07:03:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15142
EWS
Comment 2
2023-06-21 10:57:16 PDT
Committed
265365@main
(c8433592f6c2): <
https://commits.webkit.org/265365@main
> Reviewed commits have been landed. Closing PR #15142 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-21 10:58:18 PDT
<
rdar://problem/111112524
>
EWS
Comment 4
2023-06-23 14:40:48 PDT
Committed
265482@main
(55c1230cb9f3): <
https://commits.webkit.org/265482@main
> Reviewed commits have been landed. Closing PR #15263 and removing active labels.
Robert Jenner
Comment 5
2023-06-23 14:43:18 PDT
(In reply to EWS from
comment #4
)
> Committed
265482@main
(55c1230cb9f3): > <
https://commits.webkit.org/265482@main
> > > Reviewed commits have been landed. Closing PR #15263 and removing active > labels.
Reverted the change because it broke "TestWebKitAPI.WebKit.OnDeviceChangeCrash" as noted in
https://bugs.webkit.org/show_bug.cgi?id=258481
Vitaly Dyackhov
Comment 6
2023-06-27 04:20:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15324
EWS
Comment 7
2023-06-27 11:46:13 PDT
Committed
265557@main
(526715a01450): <
https://commits.webkit.org/265557@main
> Reviewed commits have been landed. Closing PR #15324 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug