[WPE] Crash in `WebKit.OnDeviceChangeCrash` API test https://bugs.webkit.org/show_bug.cgi?id=258353

Reviewed by Philippe Normand.

Currently, when we create `Preview` we assume that the process pool was
already created and is ready to use. But actually, it's not guaranteed.

This patch creates a new process pool when it was not provided by
`PageConfiguration`.

* Source/WebKit/UIProcess/API/wpe/WPEView.cpp:
(WKWPE::m_backend):
* Tools/TestWebKitAPI/glib/TestExpectations.json:

Canonical link: https://commits.webkit.org/265557@main